// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scatter 1`] = `
{
  "annotation": {},
  "chartType": "scatter",
  "config": {
    "scatter": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "crosshairLine": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "lineColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "scatter": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "crosshairLine": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "lineColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "A-2019-sales",
      "__Dim_Color__": "A-2019-sales",
      "__Dim_Detail__": "A-2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 10,
      "__MeaYValue__": 100,
      "__OriginalData__": {
        "__Dim_ColorId__": "A-2019-profit",
        "__Dim_Color__": "A-2019-profit",
        "__Dim_Detail__": "A-2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 100,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "sales": 100,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "A-2020-sales",
      "__Dim_Color__": "A-2020-sales",
      "__Dim_Detail__": "A-2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 20,
      "__MeaYValue__": 110,
      "__OriginalData__": {
        "__Dim_ColorId__": "A-2020-profit",
        "__Dim_Color__": "A-2020-profit",
        "__Dim_Detail__": "A-2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 20,
        "__OriginalData__": {
          "date": "2020",
          "profit": 20,
          "sales": 110,
          "type": "A",
        },
        "date": "2020",
        "profit": 20,
        "sales": 110,
        "type": "A",
      },
      "date": "2020",
      "profit": 20,
      "sales": 110,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "A-2021-sales",
      "__Dim_Color__": "A-2021-sales",
      "__Dim_Detail__": "A-2021",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 30,
      "__MeaYValue__": 120,
      "__OriginalData__": {
        "__Dim_ColorId__": "A-2021-profit",
        "__Dim_Color__": "A-2021-profit",
        "__Dim_Detail__": "A-2021",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 120,
          "type": "A",
        },
        "date": "2021",
        "profit": 30,
        "sales": 120,
        "type": "A",
      },
      "date": "2021",
      "profit": 30,
      "sales": 120,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "A-2022-sales",
      "__Dim_Color__": "A-2022-sales",
      "__Dim_Detail__": "A-2022",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 40,
      "__MeaYValue__": 130,
      "__OriginalData__": {
        "__Dim_ColorId__": "A-2022-profit",
        "__Dim_Color__": "A-2022-profit",
        "__Dim_Detail__": "A-2022",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 40,
        "__OriginalData__": {
          "date": "2022",
          "profit": 40,
          "sales": 130,
          "type": "A",
        },
        "date": "2022",
        "profit": 40,
        "sales": 130,
        "type": "A",
      },
      "date": "2022",
      "profit": 40,
      "sales": 130,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "A-2023-sales",
      "__Dim_Color__": "A-2023-sales",
      "__Dim_Detail__": "A-2023",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 50,
      "__MeaYValue__": 140,
      "__OriginalData__": {
        "__Dim_ColorId__": "A-2023-profit",
        "__Dim_Color__": "A-2023-profit",
        "__Dim_Detail__": "A-2023",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 50,
        "__OriginalData__": {
          "date": "2023",
          "profit": 50,
          "sales": 140,
          "type": "A",
        },
        "date": "2023",
        "profit": 50,
        "sales": 140,
        "type": "A",
      },
      "date": "2023",
      "profit": 50,
      "sales": 140,
      "type": "A",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "profit",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaXValue__",
      },
      "foldInfoList": [
        {
          "foldMap": {
            "profit": "profit",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureValue": "__MeaXValue__",
        },
        {
          "foldMap": {
            "sales": "sales",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureValue": "__MeaYValue__",
        },
      ],
      "id": "scatter",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "A-2019-profit": "A-2019-profit",
          "A-2019-sales": "A-2019-sales",
          "A-2020-profit": "A-2020-profit",
          "A-2020-sales": "A-2020-sales",
          "A-2021-profit": "A-2021-profit",
          "A-2021-sales": "A-2021-sales",
          "A-2022-profit": "A-2022-profit",
          "A-2022-sales": "A-2022-sales",
          "A-2023-profit": "A-2023-profit",
          "A-2023-sales": "A-2023-sales",
        },
        "colorItems": [
          "A-2019-profit",
          "A-2020-profit",
          "A-2021-profit",
          "A-2022-profit",
          "A-2023-profit",
          "A-2019-sales",
          "A-2020-sales",
          "A-2021-sales",
          "A-2022-sales",
          "A-2023-sales",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "类型",
      "id": "type",
      "location": "dimension",
    },
    {
      "alias": "日期",
      "id": "date",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "type",
      "date",
      "__MeaName__",
    ],
    "column": [],
    "detail": [
      "type",
      "date",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "type",
      "date",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "primary",
      "children": [
        {
          "alias": "profit",
          "id": "profit",
        },
      ],
      "id": "primary",
    },
    {
      "alias": "secondary",
      "children": [
        {
          "alias": "sales",
          "id": "sales",
        },
      ],
      "id": "secondary",
    },
  ],
}
`;

exports[`scatter 2`] = `
{
  "animation": true,
  "axes": [
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "right": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "bottom",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "A-2019-profit",
      "A-2020-profit",
      "A-2021-profit",
      "A-2022-profit",
      "A-2023-profit",
      "A-2019-sales",
      "A-2020-sales",
      "A-2021-sales",
      "A-2022-sales",
      "A-2023-sales",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
    "yField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {},
    "id": "scatter",
    "values": [
      {
        "__Dim_ColorId__": "A-2019-sales",
        "__Dim_Color__": "A-2019-sales",
        "__Dim_Detail__": "A-2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 10,
        "__MeaYValue__": 100,
        "__OriginalData__": {
          "__Dim_ColorId__": "A-2019-profit",
          "__Dim_Color__": "A-2019-profit",
          "__Dim_Detail__": "A-2019",
          "__MeaId__": "profit",
          "__MeaName__": "profit",
          "__MeaXValue__": 10,
          "__OriginalData__": {
            "date": "2019",
            "profit": 10,
            "sales": 100,
            "type": "A",
          },
          "date": "2019",
          "profit": 10,
          "sales": 100,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "A-2020-sales",
        "__Dim_Color__": "A-2020-sales",
        "__Dim_Detail__": "A-2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 20,
        "__MeaYValue__": 110,
        "__OriginalData__": {
          "__Dim_ColorId__": "A-2020-profit",
          "__Dim_Color__": "A-2020-profit",
          "__Dim_Detail__": "A-2020",
          "__MeaId__": "profit",
          "__MeaName__": "profit",
          "__MeaXValue__": 20,
          "__OriginalData__": {
            "date": "2020",
            "profit": 20,
            "sales": 110,
            "type": "A",
          },
          "date": "2020",
          "profit": 20,
          "sales": 110,
          "type": "A",
        },
        "date": "2020",
        "profit": 20,
        "sales": 110,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "A-2021-sales",
        "__Dim_Color__": "A-2021-sales",
        "__Dim_Detail__": "A-2021",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 30,
        "__MeaYValue__": 120,
        "__OriginalData__": {
          "__Dim_ColorId__": "A-2021-profit",
          "__Dim_Color__": "A-2021-profit",
          "__Dim_Detail__": "A-2021",
          "__MeaId__": "profit",
          "__MeaName__": "profit",
          "__MeaXValue__": 30,
          "__OriginalData__": {
            "date": "2021",
            "profit": 30,
            "sales": 120,
            "type": "A",
          },
          "date": "2021",
          "profit": 30,
          "sales": 120,
          "type": "A",
        },
        "date": "2021",
        "profit": 30,
        "sales": 120,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "A-2022-sales",
        "__Dim_Color__": "A-2022-sales",
        "__Dim_Detail__": "A-2022",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 40,
        "__MeaYValue__": 130,
        "__OriginalData__": {
          "__Dim_ColorId__": "A-2022-profit",
          "__Dim_Color__": "A-2022-profit",
          "__Dim_Detail__": "A-2022",
          "__MeaId__": "profit",
          "__MeaName__": "profit",
          "__MeaXValue__": 40,
          "__OriginalData__": {
            "date": "2022",
            "profit": 40,
            "sales": 130,
            "type": "A",
          },
          "date": "2022",
          "profit": 40,
          "sales": 130,
          "type": "A",
        },
        "date": "2022",
        "profit": 40,
        "sales": 130,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "A-2023-sales",
        "__Dim_Color__": "A-2023-sales",
        "__Dim_Detail__": "A-2023",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 50,
        "__MeaYValue__": 140,
        "__OriginalData__": {
          "__Dim_ColorId__": "A-2023-profit",
          "__Dim_Color__": "A-2023-profit",
          "__Dim_Detail__": "A-2023",
          "__MeaId__": "profit",
          "__MeaName__": "profit",
          "__MeaXValue__": 50,
          "__OriginalData__": {
            "date": "2023",
            "profit": 50,
            "sales": 140,
            "type": "A",
          },
          "date": "2023",
          "profit": 50,
          "sales": 140,
          "type": "A",
        },
        "date": "2023",
        "profit": 50,
        "sales": 140,
        "type": "A",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "point": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
        "lineWidth": 1,
        "scaleX": 1.4,
        "scaleY": 1.4,
        "stroke": [Function],
      },
    },
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "scatter",
  "xField": "__MeaXValue__",
  "yField": "__MeaYValue__",
}
`;
